--- a/resume/OCI_CV.html
+++ b/resume/OCI_CV.html
@@ -21,7 +21,8 @@
 
 <h2>About Me:</h2>
 
-<p>Passionate and accomplished Machine Learning Professional with a decade of hands-on expertise in Computer Vision, Natural Language Processing, Recommender Systems, and complex problem-solving. Proven track record of leading teams, engaging with clients, and contributing impactful research to the field. A dedicated individual with a passion for innovation and a drive to deliver cutting-edge solutions.</p>
+<p>Passionate and accomplished Machine Learning Professional with 10+ years of hands-on expertise in designing and implementing advanced Computer Vision, Natural Language Processing systems.
+Proven track record of leading teams, engaging with clients, and contributing impactful research to the field. A dedicated individual with a passion for innovation and a drive to deliver cutting-edge solutions.</p>
 
 <h2>Objective</h2>
 
@@ -32,6 +33,11 @@
 <h2>Professional Experience:</h2>
 
 <h3>Machine Learning Lead - Target Corporation (Feb 2021 – Present)</h3>
+
+<ul>
+<li>Collaborate cross-functionally with product managers, software engineers, and other stakeholders to understand business needs and devise solutions that align with strategic objectives.</li>
+<li>Conduct research to identify new state-of-the-art deep learning-based computer vision approaches, algorithms, and methodologies. </li>
+</ul>
 
 <h4>Anomaly Detection System for Data Pipeline</h4>
 
@@ -44,26 +50,11 @@
 <h4>Invoice Digitisation System</h4>
 
 <ul>
-<li>Implemented OCR model fine-tuning to detect specific fonts used in invoices.</li>
-<li>Conducted document analysis to locate table areas for text extraction.</li>
-<li>Identified and reconstructed tabular structures.</li>
+<li>Implemented OCR model fine-tuning to detect and recognise specific style of text used in invoices.</li>
+<li>Finetuned transformer based layout analysis model to locate table areas for text extraction.</li>
+<li>Finetuned table transformer architecture and identified and reconstructed tabular structures.</li>
 <li>Digitized table data into structured JSON format, preserving row and column information as keys.</li>
-<li><p>Extracted key attributes from invoices for image indexing and efficient searching.</p>
-
-<p><strong>Significance:</strong></p></li>
-<li>Streamlined the digitization process, reducing manual effort significantly.</li>
-<li>Improved data accuracy and accessibility for efficient search and retrieval.</li>
-<li>Enhanced overall document management and data extraction efficiency.</li>
-</ul>
-
-<h4>Real-Time Safety Monitoring System</h4>
-
-<ul>
-<li>Developed a real-time monitoring system using camera streams to detect individuals in unsafe zones and ensure adherence to safety protocols.</li>
-<li>Recorded safety violations with evidence, raising safety incidents for review and training.</li>
-<li>Extended monitoring capabilities to cover a wider area, overcoming resource and weather constraints.</li>
-<li>Enhanced safety and operational efficiency.</li>
-<li>Reduced safety violation events by 40%.</li>
+<li>Extracted key attributes from invoices for image indexing and efficient searching.</li>
 </ul>
 
 <h4>Privacy Blur Feature Implementation</h4>
@@ -71,10 +62,7 @@
 <ul>
 <li>Developed a privacy blur feature for archived video streams.
 <ul>
-<li>Employed lightweight object tracking and detectors to reduce processing needs.</li>
-<li>Ensured real-time video processing while obfuscating individuals' identities.</li>
-<li>Improved security and privacy standards of the video archive system.</li>
-<li>Collaborated for seamless integration and performance optimization.</li>
+<li>Employed lightweight linear object tracking(kalman Filter) and yolo object detectors to reduce compute needs.</li>
 </ul></li>
 <li>Mentored junior team members, fostering their growth and enhancing the overall team's performance.</li>
 </ul>
@@ -84,7 +72,9 @@
 <h4>Question Tagging and Topic Extraction System</h4>
 
 <ul>
+<li>Collaborated with SME, Data engineers and annotator team to gather and curate high-quality datasets for training and validation purposes.</li>
 <li>Designed and implemented an automated system to tag questions with subjects and extract relevant topics from text.</li>
+<li>Fine tuned Resnet based architecture for visual feature extraction and used BERT model for text embeddings extraction</li>
 <li>Enhanced content organization and searchability in a repository of millions of question papers.</li>
 <li>Utilized natural language processing techniques for precise content discovery.</li>
 <li>Developed question tagging using both text and image content, enabling better content recommendation and search accuracy.</li>
@@ -112,25 +102,15 @@
 <ul>
 <li>Spearheaded the catalogue filtration project, ensuring accurate product categorization on the .com website, resulting in a 12% reduction in incorrect product placements.</li>
 <li>Collaborated directly with clients to understand their specific business requirements and challenges that could be addressed through our Machine Learning capabilities.</li>
-<li>Led a high-performing team, taking responsibility for collecting client requirements, translating them into technical specifications, and effectively communicating these requirements to the team.</li>
 <li>Played a key role in project planning and estimation, ensuring alignment with client expectations, and optimizing resource allocation.</li>
+<li>Led a high-performing team, taking responsibility for collecting client requirements, translating them into technical specifications, and effectively communicating these requirements to the team.</li>
 <li>Orchestrated end-to-end solution development, including data collection, preprocessing, model development, testing, and deployment, to meet client objectives and project timelines.</li>
 <li>Successfully delivered customized Machine Learning solutions, exceeding client expectations and achieving project milestones.</li>
-</ul>
-
-<h4>course recommender system</h4>
-
-<ul>
-<li>Led the development and implementation of a course recommendation system within our Learning &amp; Development (L&amp;D) platform.</li>
-<li>Collaborated with cross-functional teams to gather user data, including user behavior, preferences, and course interactions.</li>
-<li>Utilized machine learning algorithms, such as collaborative filtering and content-based filtering, to personalize course recommendations for users.</li>
-<li>Integrated data pipelines for real-time data ingestion, processing, and updating of recommendations.</li>
 </ul>
 
 <h3>Sr. Research Analyst - Edureka (Dec 2013 – Sep 2015)</h3>
 
 <ul>
-<li>Conducted extensive research on Machine Learning course content and collaborated closely with Subject Matter Experts (SMEs) to develop comprehensive technical content, including exercises, quizzes, and other learning materials.</li>
 <li>Served as a Teaching Assistant (TA), providing invaluable support to students in solving complex technical problems and facilitating their learning experience.
 <ul>
 <li>Recognized as the "Best Performer" for five consecutive months for outstanding contributions to student success and engagement.</li>
@@ -139,7 +119,6 @@
 <ul>
 <li>Five of my blog posts became the highest-traffic generators on the platform.</li>
 </ul></li>
-<li>Led the initiative to create a comprehensive knowledge base, reducing the workload on the TA team and enhancing the overall efficiency of support and learning resources.</li>
 </ul>
 
 <hr />
@@ -153,11 +132,11 @@
 <h2>Skills:</h2>
 
 <ul>
-<li>Computer Vision: Object Detection, Image Classification.</li>
+<li>Computer Vision: Object Detection, Image Classification, Text Detection, Text recognition, Segmentation</li>
 <li>NLP: Text Classification, Topic Modeling.</li>
-<li>Machine Learning: Deep Learning (PyTorch, TensorFlow), Scikit-learn.</li>
+<li>Deep Learning : convolutional neural networks (CNNs), Transformers, ViT</li>
+<li>Frameworks: Deep Learning (PyTorch, TensorFlow), Scikit-learn.</li>
 <li>Data Processing: NumPy, Pandas, Spark, Hadoop.</li>
-<li>Cloud Platforms: AWS, Azure, Google Cloud.</li>
 <li>Software Engineering: Git, Docker, CI/CD.</li>
 </ul>
 
@@ -166,10 +145,6 @@
 <ul>
 <li>Poster presentation on "Domain Adaptation of Image Caption Model for Video Descriptions" at AI &amp; Deep Learning Conference (GTC 2018, NVIDIA).</li>
 </ul>
-
-<h2>References:</h2>
-
-<p>Available upon request.</p>
 
         </body>
         </html>
