--- a/resume/OCI_CV.html
+++ b/resume/OCI_CV.html
@@ -32,7 +32,7 @@ Proven track record of leading teams, engaging with clients, and contributing im
 
 <h2>Professional Experience:</h2>
 
-<h3>Machine Learning Lead - Target Corporation (Feb 2021 – Present)</h3>
+<h3>Sr Machine Learning Engineer - Target Corporation (Feb 2021 – Present)</h3>
 
 <ul>
 <li>Collaborate cross-functionally with product managers, software engineers, and other stakeholders to understand business needs and devise solutions that align with strategic objectives.</li>
